feat: 添加ChatGPT模型选择器及API集成
新增ModelSelector组件，支持在对话模式下选择不同的ChatGPT模型。集成OpenAI API，实现在对话模式下使用ChatGPT进行流式聊天。更新配置文件以支持模型选择和API密钥配置。优化搜索逻辑，确保在对话模式下使用正确的模型进行交互。

--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,13 @@ node_modules
 dist
 dist-ssr
 *.local
+config.js
+.env
 public/config.js
+docker-compose.yml
+dockerfile
+.dockerignore
+nginx.conf
 
 
 # Editor directories and files
